# FBRuntimeTweaker

./: .clangformat  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: array.h  entry_point.h  error.h  frosty_mod.h  frosty_resource.h  hook_man.h  parse_common.h  runtime_tweaker.h  util.h
source/: array.c  entry_point.c  frosty_mod.c  frosty_resource.c  hook_man.c  parse_common.c  runtime_tweaker.c  util.c
test/: array_test.cpp  char_array_test.cpp  frosty_test.cpp  int_array_test.cpp  log_test.cpp
test/data/: PM_IA_Boba_Fett_Rework.fbmod  Test.fbmod
